# Tokamak

./: .gitignore  LICENSE  README.md  ROADMAP.md  dashboard.py  main.py  pyproject.toml  setup_cpp.py
.github/workflows/: ci.yml
notebooks/: bayesopt_demo.py  burn_demo.py  check_values.py  control_demo.py  cpp_benchmark.py  disruption_demo.py  flux_surfaces.py  fuel_cycle_demo.py  lawson_diagram.py  operational_space.py  optimum_demo.py  plasma_animation.py  plasma_animation_toroidal.py  profile_emulator_demo.py  radial_profile.py  radiative_collapse.py  rl_control_demo.py  surrogate_demo.py  vertical_control.py
src/tokamak/: __init__.py  _tridiag.cpp  _tridiag.py  bayesopt.py  burn.py  constants.py  control.py  disruption.py  engineering.py  equilibrium.py  fuel_cycle.py  optimization.py  power_balance.py  profile_emulator.py  radiation.py  reactivity.py  rl_control.py  stability.py  surrogate.py  transport.py
tests/: test_bayesopt.py  test_burn.py  test_control.py  test_dashboard.py  test_disruption.py  test_engineering.py  test_equilibrium.py  test_fuel_cycle.py  test_optimization.py  test_power_balance.py  test_profile_emulator.py  test_radiation.py  test_reactivity.py  test_rl_control.py  test_stability.py  test_surrogate.py  test_transport.py  test_tridiag.py
